# advent-of-code

./: .gitignore  README.md  generator.py  requirements.txt
1/: solve.py
2/: solve.py
2020/: README.md
2020/11/: day11.py
2020/12/: day12.py
2020/13/: day13.py
2020/14/: day14.py
2020/2/: day2.py
2020/4/: day4.py
2020/5/: day5.py
2020/6/: day6.py
2020/7/: day7.py
2020/day01/: day1.py  input.txt
2020/day02/: day2.py
2020/day03/: day3.py
2020/day04/: day4.py
2020/day05/: day5.py
2020/day06/: day6.py
2020/day07/: day7.py
2020/day08/: day8.py
2020/day09/: day9.py
2020/day10/: day10.py
2020/day11/: day11.py
2020/day12/: day12.py
2020/day13/: day13.py
2020/day14/: day14.py
2020/day15/: day15.py  input.txt
2020/day16/: day16.py
2020/day17/: day17.py
2020/day18/: day18.py
2020/day19/: day19.py  day19_2.py
2020/day20/: day20.py
2020/day21/: day21.py
2020/day22/: day22.py
2020/day23/: day23.py
2020/day24/: day24.py
2020/day25/: day25.py
2020/template_generator/: generator.py  template.md.jinja
2021/: README.md
2021/day01/: day1.py  input.txt
2021/day02/: day2.py  (+1 more)
2022/: README.md
2023/: Cargo.toml  README.md
2024/: Cargo.toml  README.md
2025/: .gitignore  Cargo.toml  README.md
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  temp
3/: solve.py
4/: solve.py
5/: solve.py
template_generator/: generator.py  template.md.jinja  template_main.md.jinja
templates/: template.md.jinja  template_main.md.jinja
(+101 files in other folders)
